src/main/default/objects/CallCreationSettings__c/CallCreationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Keeps settings used for creation of visits.</description>
    <label>Call Creation Settings</label>
</CustomObject>