src/main/default/objects/CallCreationSettings__c/fields/AllowedStatuses__c.field-meta.xml
<CustomField>
    <fullName>AllowedStatuses__c</fullName>
    <inlineHelpText>Please fill in all statuses for which calls should be generated. They need to be delimited by comma.</inlineHelpText>
    <label>Allowed Statuses</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>