src/main/default/objects/CallCreationSettings__c/fields/CallStatus__c.field-meta.xml
<CustomField>
    <fullName>CallStatus__c</fullName>
    <inlineHelpText>Please enter name of the status of the visit.</inlineHelpText>
    <label>Call Status</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>