src/main/default/objects/CallCreationSettings__c/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <inlineHelpText>Please enter a call type that should be used for generated recurring calls.</inlineHelpText>
    <label>Call Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>